@@ -32,6 +32,6 @@
 		"wdb/nc_staticfilecache": "self.version"
 	},
     "suggest": {
-        "typo3/cms": ">=4.2.11,<=6.1.99"
+        "typo3/cms": ">=4.2.11,<=6.2.99"
     }
 }
