@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "nc_staticfilecache".
 #
-# Auto generated 16-08-2015 11:48
+# Auto generated 08-08-2015 23:52
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -15,12 +15,12 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Transparent static file cache solution using mod_rewrite and mod_expires. Increase response times for static pages by a factor of 230!',
 	'category' => 'fe',
 	'shy' => 0,
-	'version' => '2.4.0',
+	'version' => '2.4.1',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
 	'loadOrder' => '',
-	'TYPO3_version' => '4.2.11-6.1.99',
+	'TYPO3_version' => '4.2.11-6.2.99',
 	'PHP_version' => '',
 	'module' => '',
 	'state' => 'stable',
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'modify_tables' => 'pages',
 	'clearcacheonload' => 0,
 	'lockType' => '',
-	'author' => 'Michiel Roos, Tim Lochmï¿½ller, Marc Hï¿½rsken',
+	'author' => 'Static File Cache team',
 	'author_email' => 'extensions@netcreators.com',
 	'author_company' => 'Netcreators',
 	'CGLcompliance' => '',
